# swagger_server/controllers/general_user_controller.py
@@ -2,15 +2,20 @@ import connexion
 import six, json
 
 from swagger_server import util
-from flask import Blueprint, request, Response, session
+from flask import Blueprint, request, Response, session, Flask
+from flask_jwt_extended import create_access_token
+from flask_jwt_extended import get_jwt_identity
+from flask_jwt_extended import jwt_required
 
 from swagger_server.models.user import User
 from swagger_server.controllers.auth import Auth
 from swagger_server.models.responses_rest import ResponsesREST
 from swagger_server.data.DBConnection import DBConnection
+from swagger_server.data.extensions import jwt
 
-login = Blueprint("Login", __name__)
+login = Blueprint('Login_user', __name__)
 
+#@jwt_required()
 def login_user(username, password):  # noqa: E501
     """Logs user into the system
 
@@ -23,30 +28,20 @@ def login_user(username, password):  # noqa: E501
 
     :rtype: str
     """
-    #json_values = request.json
-    #values_required = {"username", "password"}
     response = Response(status=ResponsesREST.INVALID_INPUT.value)
-    #if all(key in json_values for key in values_required):
     account_login = User()
-    account_login.username = username #json_values["username"]
-    account_login.password = password #json_values["password"]
-        
+    account_login.username = username
+    account_login.password = password
     query = "SELECT Usuariocorreo FROM Usuario WHERE Usuariocorreo = %s AND Contrasenia = %s"
     param = [account_login.username, account_login.password]
     connection = DBConnection()
     list_accounts = connection.select(query, param)
-    account = False
     if list_accounts:
-        account = True
-    if account:
-        token = Auth.generate_token(account_login, 1)
-        #session.permanent = True
-        #session["token"] = token
-        response = Response(json.dumps({"token": token}), status=ResponsesREST.SUCCESSFUL.value, mimetype="application/json")
+        acces_token = create_access_token(identity=username)
+        response = Response(json.dumps(acces_token), status=ResponsesREST.SUCCESSFUL.value, mimetype="application/json")
     else:
-        response = Response(status=account)
+        response = Response(status=ResponsesREST.NOT_AUTHORIZED.value)
     return response
-
 
 def logout_user():  # noqa: E501
     """Logs out current logged in user session
